--- a/index.html
+++ b/index.html
@@ -1161,7 +1161,7 @@ body {
 
       <div class="button-row">
         <div class="button-wrap" data-type="Yoga">
-          <img src="workout-type/yoga.png" class="wbutton">
+          <img src="/workout-type/yoga.png" class="wbutton">
           <div class="button-label">Yoga</div>
         </div>
         <div class="button-wrap" data-type="Pilates">
@@ -1591,3 +1591,4 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </body>
 </html>
+
