--- a/index.html
+++ b/index.html
@@ -1161,46 +1161,46 @@ body {
 
       <div class="button-row">
         <div class="button-wrap" data-type="Yoga">
-          <img src="/workout-type/yoga.png" class="wbutton">
+          <img src="workout-type/Yoga.png" class="wbutton">
           <div class="button-label">Yoga</div>
         </div>
         <div class="button-wrap" data-type="Pilates">
-          <img src="workout-type/pilates.png" class="wbutton">
+          <img src="workout-type/Pilates.png" class="wbutton">
           <div class="button-label">Pilates</div>
         </div>
         <div class="button-wrap" data-type="Walking">
-          <img src="workout-type/walking.png" class="wbutton">
+          <img src="workout-type/Walking.png" class="wbutton">
           <div class="button-label">Walking</div>
         </div>
         <div class="button-wrap" data-type="Strength">
-          <img src="workout-type/strength.png" class="wbutton">
+          <img src="workout-type/Strength.png" class="wbutton">
           <div class="button-label">Strength</div>
         </div>
         <div class="button-wrap" data-type="Elliptical">
-          <img src="workout-type/elliptical.png" class="wbutton">
+          <img src="workout-type/Elliptical.png" class="wbutton">
           <div class="button-label">Elliptical</div>
         </div>
       </div>
 
       <div class="button-row">
         <div class="button-wrap" data-type="Stepper">
-          <img src="workout-type/stepper.png" class="wbutton">
+          <img src="workout-type/Stepper.png" class="wbutton">
           <div class="button-label">Stepper</div>
         </div>
         <div class="button-wrap" data-type="Cycling">
-          <img src="workout-type/cycling.png" class="wbutton">
+          <img src="workout-type/Cycling.png" class="wbutton">
           <div class="button-label">Cycling</div>
         </div>
         <div class="button-wrap" data-type="Dance">
-          <img src="workout-type/dance.png" class="wbutton">
+          <img src="workout-type/Dance.png" class="wbutton">
           <div class="button-label">Dance</div>
         </div>
         <div class="button-wrap" data-type="Running">
-          <img src="workout-type/running.png" class="wbutton">
+          <img src="workout-type/Running.png" class="wbutton">
           <div class="button-label">Running</div>
         </div>
         <div class="button-wrap" data-type="HIIT">
-          <img src="workout-type/hiit.png" class="wbutton">
+          <img src="workout-type/Hiit.png" class="wbutton">
           <div class="button-label">HIIT</div>
         </div>
       </div>
@@ -1591,4 +1591,5 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </body>
 </html>
+
 
