--- a/index.html
+++ b/index.html
@@ -1200,7 +1200,7 @@ body {
           <div class="button-label">Running</div>
         </div>
         <div class="button-wrap" data-type="HIIT">
-          <img src="workout-type/Hiit.png" class="wbutton">
+          <img src="workout-type/HIIT.png" class="wbutton">
           <div class="button-label">HIIT</div>
         </div>
       </div>
@@ -1591,5 +1591,6 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </body>
 </html>
+
 
 
